--- a/.pipeline/JenkinsFile
+++ b/.pipeline/JenkinsFile
@@ -1,18 +1,21 @@
 pipeline {
+    agent any
+
     parameters {
-        booleanParam(defaultValue: false, description: 'Do SonarQube analysis', name: 'runSonarQube')
+        booleanPram(defaultValue: false, description: 'Do SonarQube analysis', name: 'runSonarQube')
     }
+
     stages {
         stage('Build') {
-            step {
-                sh 'yarn install'
-                sh 'yarn build'
+            steps {
+                bat 'yarn install'
+                bat 'yarn build'
             }
         }
 
         stage('Run unit tests') {
-            step {
-                sh 'yarn test'
+            steps {
+                bat 'yarn test'
             }
         }
 
@@ -22,7 +25,7 @@ pipeline {
                     param.runSonarQube == true
                 }
             }
-            step {
+            steps {
                 echo "TBD"
             }
         }
@@ -33,7 +36,7 @@ pipeline {
                     param.runSonarQube == true
                 }
             }
-            step {
+            steps {
                 echo "TBD"
             }
         }
