fixed test result xml file name

--- a/.pipeline/JenkinsFile
+++ b/.pipeline/JenkinsFile
@@ -16,6 +16,7 @@ pipeline {
         stage('Run unit tests') {
             steps {
                 bat 'yarn test'
+                junit allowEmptyResults: true, keepLongStdio: true, testResults: 'unittest-sonar.xml'
             }
         }
 
