changed the test result xml path

--- a/test/.mocharc.yml
+++ b/test/.mocharc.yml
@@ -3,4 +3,4 @@ require: 'ts-node/register'
 exit: true
 reporter: mocha-sonarqube-reporter
 reporter-option:
-  - 'output=unittest-sonar.xml'
+  - 'output=results/unittest-sonar.xml'
