--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chai": "^4.3.6",
     "mocha": "^9.2.0",
     "mocha-jenkins-reporter": "^0.4.7",
+    "mocha-junit-reporter": "^2.0.2",
     "mocha-multi-reporters": "^1.5.1",
     "mocha-sonarqube-reporter": "^1.0.2",
     "nyc": "^15.1.0",
@@ -21,8 +22,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "npx nyc mocha --colors --config ./test/.mocharc.yml ./test/*.ts --reporter=mocha-sonarqube-reporter",
+    "test": "npx nyc mocha --colors --config ./test/.mocharc.yml ./test/*.ts --reporter=mocha-multi-reporters --reporterOptions configFile=config.json",
     "test2": "npx nyc mocha --reporter=lcov --colors --config ./test/.mocharc.yml ./test/*.ts"
-
   }
 }
