--- a/pipeline/JenkinsFile
+++ b/pipeline/JenkinsFile
@@ -16,7 +16,7 @@ pipeline {
         stage('Run unit tests') {
             steps {
                 bat 'yarn test'
-                xunit([JUnit(excludesPattern: '', pattern: 'results/*.xml', stopProcessingIfError: true)])
+                junit 'results/*.xml'
             }
         }
 
