--- a/.pipeline/JenkinsFile
+++ b/.pipeline/JenkinsFile
@@ -3,6 +3,7 @@ pipeline {
 
     parameters {
         booleanParam(defaultValue: false, description: 'Do SonarQube analysis', name: 'runSonarQube')
+        booleanParam(defaultValue: false, description: 'Check quality gate', name: 'checkQualityGate')
     }
 
     stages {
@@ -34,7 +35,7 @@ pipeline {
         stage('Check quality gate') {
             when {
                 expression {
-                    params.runSonarQube == true
+                    params.checkQualityGate == true
                 }
             }
             steps {
