enable sonar analysis

--- a/.pipeline/JenkinsFile
+++ b/.pipeline/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     parameters {
-        booleanParam(defaultValue: false, description: 'Do SonarQube analysis', name: 'runSonarQube')
+        booleanParam(defaultValue: true, description: 'Do SonarQube analysis', name: 'runSonarQube')
         booleanParam(defaultValue: false, description: 'Check quality gate', name: 'checkQualityGate')
     }
 
