--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
+sonar.host.url=http://localhost:9000
+sonar.login=66ed19b485e9d1b072cbff8953b81997fac6e00d
 sonar.projectKey=poc
 sonar.projectName=Cantas
 
