--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mocha-multi-reporters": "^1.5.1",
     "mocha-sonarqube-reporter": "^1.0.2",
     "nyc": "^15.1.0",
+    "sonarqube-scanner": "^2.8.1",
     "ts-mocha": "^9.0.2",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
@@ -23,6 +24,6 @@
   "scripts": {
     "build": "tsc",
     "test": "npx nyc --reporter=lcov mocha --colors --config ./test/.mocharc.yml ./test/*.ts --reporter=mocha-multi-reporters --reporterOptions configFile=config.json",
-    "test2": "npx nyc mocha --reporter=lcov --colors --config ./test/.mocharc.yml ./test/*.ts"
+    "sonar": "sonar-scanner"
   }
 }
