--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.host.url=http://localhost:9000
 sonar.login=66ed19b485e9d1b072cbff8953b81997fac6e00d
 sonar.projectKey=poc
-sonar.projectName=Cantas
+sonar.projectName=Shift Left POC
 
 # path to source directories (required)
 sonar.sources=./src
