--- a/.pipeline/JenkinsFile
+++ b/.pipeline/JenkinsFile
@@ -3,7 +3,7 @@ pipeline {
 
     parameters {
         booleanParam(defaultValue: true, description: 'Do SonarQube analysis', name: 'runSonarQube')
-        booleanParam(defaultValue: false, description: 'Check quality gate', name: 'checkQualityGate')
+        booleanParam(defaultValue: true, description: 'Check quality gate', name: 'checkQualityGate')
     }
 
     stages {
@@ -40,7 +40,13 @@ pipeline {
                 }
             }
             steps {
-                echo "***** Run SonarQube Analysis *****"
+                echo "***** Check quality gate *****"
+                withSonarQubeEnv() {
+                    def qg = waitForQualityGate()
+                    if (qg.status != 'OK') {
+                        error "Pipeline aborted due to quality gate failure: ${qg.status}"
+                    }
+                }
             }
         }
     }
