--- a/.pipeline/JenkinsFile
+++ b/.pipeline/JenkinsFile
@@ -42,9 +42,11 @@ pipeline {
             steps {
                 echo "***** Check quality gate *****"
                 withSonarQubeEnv() {
-                    def qg = waitForQualityGate()
-                    if (qg.status != 'OK') {
-                        error "Pipeline aborted due to quality gate failure: ${qg.status}"
+                    script {
+                        def qg = waitForQualityGate()
+                        if (qg.status != 'OK') {
+                            error "Pipeline aborted due to quality gate failure: ${qg.status}"
+                        }
                     }
                 }
             }
