--- a/.pipeline/JenkinsFile
+++ b/.pipeline/JenkinsFile
@@ -41,13 +41,8 @@ pipeline {
             }
             steps {
                 echo "***** Check quality gate *****"
-                script {
-                    withSonarQubeEnv() {
-                        def qg = waitForQualityGate()
-                        if (qg.status != 'OK') {
-                            error "Pipeline aborted due to quality gate failure: ${qg.status}"
-                        }
-                    }
+                timeout(time: 1, unit: 'HOURS') {
+                    waitForQualityGate abortPipeline: true
                 }
             }
         }
