--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.16",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "chai": "^4.3.6",
+    "eslint": "^8.9.0",
     "mocha": "^9.2.0",
     "mocha-jenkins-reporter": "^0.4.7",
     "mocha-junit-reporter": "^2.0.2",
@@ -23,6 +26,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "lint": "eslint . --ext .ts",
     "test": "npx nyc --reporter=lcov mocha --colors --config ./test/.mocharc.yml ./test/*.ts --reporter=mocha-multi-reporters --reporterOptions configFile=config.json",
     "sonar": "sonar-scanner"
   }
